﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-10-01 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.9.0.1 released from MAINT_2_9_0

2006-09-29 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/grab_globals.lib.php: fix attack via _FILES,
      thanks to Stefan Esser
    * libraries/database_interface.lib.php, bug #1566904, typo in require,
      thanks to Björn Wiberg - bwiberg.
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat

2006-09-27 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php, /session.inc.php, /url_generating.lib.php:
      security fixes (announcement will come later),
      thanks to Sebastian Mendel and Stefan Esser
    * libraries/.htaccess: remove potential vulnerability (allow from none),
      thanks to Michael Heimpold
    ### 2.9.1-rc1 released from QA_2_9

2006-09-22 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/tbl_properties_links.inc.php: bug #1560152, 
      after renaming a table the navigation does not work

2006-09-20 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.9.0 released from QA_2_9

2006-09-19 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html, libraries/footer.inc.php, 
      libraries/dbg/profiling.php: remove profiling feature
      due to licensing issues (non GPL code)

2006-09-15 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/finnish: Update, thanks to Yoneh - yoneh.
    * lang/bulgarian: Update, thanks to Stanislav Yordanov - stanprog.

2006-09-14 Michal Čihař  <michal@cihar.com>
    * db_details_structure.php: Fix table footer when MySQL does not support
      collations (bug #1554885, patch #1557269, thanks to Isaac Bennetch -
      ibennetch).

2006-09-12 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/config.default.php, libraries/export/sql.php:
      bug #1556934, sql compatibility mode on export

2006-09-08 Marc Delisle  <lem9@users.sourceforge.net>